Fix margin problem, remove unnecessary class
Fixed too large margin in sign, removed sign-text class.

--- a/style.css
+++ b/style.css
@@ -167,9 +167,15 @@ ul {
     cursor:pointer;
 }
 
+.sign-content p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 #call {
     font-weight: 900;
     font-size: 20px;
+    margin-bottom: 8px;
 }
 
 footer {
